--- a/src/main/resources/templates/phoneNumberResult.html
+++ b/src/main/resources/templates/phoneNumberResult.html
@@ -35,21 +35,18 @@
     </style>
 </head>
 <body>
-<h1 th:text="#{content.title}">Hello Page</h1>
-<p th:text="${msg}">message.</p>
-<table th:object="${object}">
-    <tr>
-        <th>ID</th>
-        <td th:text="*{id}"></td>
-    </tr>
-    <tr>
-        <th>NAME</th>
-        <td th:text="*{name}"></td>
-    </tr>
-    <tr>
-        <th>MAIL</th>
-        <td th:text="*{value}"></td>
-    </tr>
-</table>
+    <h1 th:text="#{content.title}">Hello Page</h1>
+    <p th:text="|expression[ ${check} ]|"></p>
+    <table th:object="${data.get(__${check}__)}">
+        <tr>
+            <th>ID</th><td th:text="*{id}"></td>
+        </tr>
+        <tr>
+            <th>NAME</th><td th:text="*{name}"></td>
+        </tr>
+        <tr>
+            <th>MAIL</th><td th:text="*{value}"></td>
+        </tr>
+    </table>
 </body>
 </html>
