--- a/src/main/resources/templates/phoneNumberTable.html
+++ b/src/main/resources/templates/phoneNumberTable.html
@@ -35,21 +35,18 @@
     </style>
 </head>
 <body>
-<h1 th:text="#{content.title}">Hello Page</h1>
-<p th:text="${msg}">message.</p>
-<table th:object="${object}">
-    <tr>
-        <th>ID</th>
-        <td th:text="*{id}"></td>
-    </tr>
-    <tr>
-        <th>NAME</th>
-        <td th:text="*{name}"></td>
-    </tr>
-    <tr>
-        <th>MAIL</th>
-        <td th:text="*{value}"></td>
-    </tr>
-</table>
+    <h1 th:text="#{content.title}">Hello Page</h1>
+    <table>
+        <tr>
+            <th>NAME</th>
+            <th>MAIL</th>
+            <th>TEL</th>
+        </tr>
+        <tr th:each="obj:${data}">
+            <td th:text="${obj[0]}"></td>
+            <td th:text="${obj[1]}"></td>
+            <td th:text="${obj[2]}"></td>
+        </tr>
+    </table>
 </body>
 </html>
