--- a/src/main/resources/templates/repository.html
+++ b/src/main/resources/templates/repository.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>    </title>
+    <title>top page</title>
+    <meta http-equiv="content-type"
+    content="text/html; charset=UTF-8"/>
+    <style>
+        h1{font-size: 18pt; font-weight: bold; color: gray;}
+        body{font-size: 13pt; color: gray; margin: 5px 25px;}
+        pre{border: solid 3px #ddd; padding: 10px;}
+    </style>
+
 </head>
 <body>
-
+    <h1 th:text="#{content.title}">Hello Page</h1>
+    <pre th:text="${data}"></pre>
 </body>
 </html>
