--- a/src/main/resources/templates/repository_index2.html
+++ b/src/main/resources/templates/repository_index2.html
@@ -32,24 +32,12 @@
             color: black;
             background: #e0e0ff;
         }
-
-        .err {
-            color: red;
-        }
     </style>
 </head>
 <body>
 <h1 th:text="#{content.title}">Hello Page</h1>
-<p th:text="${msg}"></p>
-<table th:object="${object}">
-    <tr>
-        <th>ID</th>
-        <th>이름</th>
-        <th>메일</th>
-        <th>연령</th>
-        <th>메모(tel)</th>
-    </tr>
-
+<table>
+    <tr><th>ID</th><th>이름</th><th>메일</th><th>연령</th><th>메모(tel)</th></tr>
     <tr th:each="obj : ${datalist}">
         <td th:text="${obj.id}"></td>
         <td th:text="${obj.name}"></td>
